--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "photo-backlog-exporter"
 version = "0.1.0"
 edition = "2021"
+default-run = "oneshot"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
