--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ rstest = "0.18.2"
 speculoos = "0.11.0"
 axum-test = "14.3.0"
 testing_logger = "0.1.1"
+assert_cmd = "2.0.14"
+predicates = "3.1.0"
