Replace obsolete `crates` withg `dependi`

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,6 @@
     "tamasfe.even-better-toml",
     "rust-lang.rust-analyzer",
     "ryanluker.vscode-coverage-gutters",
-    "serayuzgur.crates"
+    "fill-labs.dependi"
   ]
 }
